fix header alignment on experiments (#3725)

--- a/frontend/src/app/components/ExperimentPlatforms/index.scss
+++ b/frontend/src/app/components/ExperimentPlatforms/index.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  .details-header & {
+    width: auto;
+    white-space: nowrap;
+  }
+
   .platform-copy {
     align-items: center;
     display: flex;
